Add image and list

--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
 </head>
 <body>
     <header>
-        <div class="wrapper">
-            
-            <nav>
-                <ul>
-                    <li>
-                        <a href=""></a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
     </header>
 
     <main>
+        <h1>Karen Fei</h1>
+        <img src="./images/image.png" alt="portrait" width="400">
 
+        <dl>
+            <dt>Student number</dt>
+            <dd>040966254</dd>
+
+            <dt>Program</dt>
+            <dd>Interactive Media Design</dd>
+
+            <dt>Course Info</dt>
+            <dd>MTM6201 Web Development</dd>
+
+            <dt>Fact About Me</dt>
+            <dd>I played competitive table tennis for 6 years</dd>
+        </dl>
     </main>
 
     <footer>
